k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskmate
  labels:
    name: taskmate
    environment: development
    project: taskmate-microservices
